--- a/src/view/compoments/NavBar/NavBar.css
+++ b/src/view/compoments/NavBar/NavBar.css
@@ -1,33 +1,267 @@
-.navBar{
-    background: #7ed321;
+body{
+    margin:0;
+    /*width: 100%;*/
 }
-@media screen and (min-width: 600px){
+@font-face {
+    font-family: "SFBold";
+    src:url("../../../assert/fonts/SFUIText-Bold.ttf")
+}
+@media screen and (min-width: 1100px ){
+    .web{
+        visibility: visible;
+        right: 5%;
+    }
+    .mobile{
+        visibility: hidden;
+    }
     .logo{
-        content: url("../../../assert/img/logo-middle-size.png");
         height: 56px;
         width: 147px;
+        margin: 30px 37px;
+    }
+    .navBar{
+        height: 116px;
+        background: #7ed321;
+    }
+    .menuBar li{
+        display: inline;
+        padding-left:45px;
+        height: 16px;
+    }
+    a{
+        padding-bottom:3px;
+        color: white;
+        background: #7ed321;
+    }
+    .menuBar{
+        display: inline-block;
+        position: absolute;
+        top:50px;
+        left: 60.6%;
+        margin: 0;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .menuButton{
+        visibility: hidden;
+    }
+    #menuToggle{
+        visibility: hidden;
     }
 }
-@media screen and (max-width: 599px){
+@media screen and (max-width: 1099px ){
+    .web{
+        visibility: visible;
+        right: 5%;
+    }
+    .mobile{
+        visibility: hidden;
+    }
+    .logo{
+        height: 56px;
+        width: 147px;
+        margin: 30px 37px;
+    }
+    .navBar{
+        height: 116px;
+        background: #7ed321;
+    }
+    .menuBar li{
+        display: inline;
+        padding-left:45px;
+        height: 16px;
+    }
+    a{
+        padding-bottom:3px;
+        color: white;
+        background: #7ed321;
+    }
+    .menuBar{
+        display: inline-block;
+        position: absolute;
+        top:50px;
+        left: 55.6%;
+        margin: 0;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .menuButton{
+        visibility: hidden;
+    }
+    #menuToggle{
+        visibility: hidden;
+    }
+  }
+a.active{
+    border-bottom:solid 1px white;
+}
+
+@media screen and (max-width: 899px){
+    .web{
+        visibility: visible;
+        right: 5%;
+    }
+    .mobile{
+        visibility: hidden;
+    }
+    .logo{
+        height: 56px;
+        width: 147px;
+        margin: 30px 37px;
+    }
+    .navBar{
+        height: 116px;
+        background: #7ed321;
+    }
+    .menuBar li{
+        display: inline;
+        padding-left:45px;
+        height: 16px;
+    }
+    a{
+        padding-bottom:3px;
+        color: white;
+        background: #7ed321;
+    }
+    .menuBar{
+        display: inline-block;
+        position: absolute;
+        top:50px;
+        left: 40.6%;
+        margin: 0;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .menuButton{
+        visibility: hidden;
+    }
+    #menuToggle{
+        visibility: hidden;
+    }
+}
+
+@media screen and (max-width: 730px){
+    .web{
+        visibility: hidden;
+    }
+    .mobile{
+        visibility: visible;
+    }
    .logo{
        height: 37pt;
        width: 98pt;
-       content: url("../../../assert/img/logo-middle-size.png");
+       margin: 20pt 25pt;
    }
-}
-.menuBar ul li{
-    display: inline;
-    padding-left:45px;
-    padding-bottom: 4px;
-    color:#fff;
-    width: 96px;
-    height: 16px;
-    font-size: 14px;
-    text-align: center;
-}
-.menuBar li a:hover{
-    border-bottom:solid 1px #fff;
-}
-@media screen and (max-width: 699px){
+    .navBar{
+       height: 77pt;
+       background: #7ed321;
+    }
+    #menuToggle{
+        opacity: 0;
+        visibility: visible;
+    }
 
+    .menuButton{
+        visibility: visible;
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top:27pt;
+        left: 85%;
+        width: 21pt;
+        height: 21pt;
+        cursor: pointer;
+        z-index: 1;
+    }
+    .menuButton > span,
+    .menuButton >span::before,
+    .menuButton > span::after{
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background: white;
+    }
+    .menuButton > span::before{
+        content: '';
+        top:-8px;
+    }
+    .menuButton >span::after{
+        content: '';
+        top: 8px;
+    }
+    .menuBar{
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        height: auto;
+        top:66pt;
+        width: 100%;
+        height: 100%;
+        padding: 35% 0;
+        list-style: none;
+        text-align: center;
+        background: white;
+        z-index: 2;
+    }
+    .menuBar li{
+        display: table;
+        margin: auto;
+        padding: 0;
+    }
+    .menuBar a{
+        display: inline-block;
+        padding-top: 12.5pt;
+        padding-bottom: 12.5pt;
+        color: #000;
+        font-weight: bolder;
+        font-size: 25pt;
+        background: white;
+    }
+    .menuBar a:focus , .menuBar a:hover{
+        color: #7ed321;
+    }
+    #menuToggle:checked ~ .menuButton > span {
+        transform: rotate(45deg);
+    }
+    #menuToggle:checked ~ .menuButton > span::before {
+        top: 0;
+        transform: rotate(0);
+        background: rgb(176 171 171);
+    }
+    #menuToggle:checked ~ .menuButton > span::after {
+        top: 0;
+        transform: rotate(90deg);
+        background: rgb(176 171 171);
+    }
+    #menuToggle:checked ~ .menuBar {
+        visibility: visible;
+        left: 0;
+    }
+}
+
+a{
+    text-decoration: none;
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: SFBold;
+}
+.web, .mobile{
+position: absolute;
+}
+.mobile{
+    top:25pt;
+    left: 65%;
+}
+.web{
+    top:35px;
+    margin-right: 10px;
+}
+.logo{
+    display: inline-block;
+    content: url("../../../assert/img/logo-min-size.png");
 }
